# TrabalhoPratico

./: .dockerignore  .gitignore  README.md  docker-compose.yml
services/rust/graphql/: .gitignore  Cargo.toml  Dockerfile
services/rust/graphql/src/: main.rs
services/rust/graphql/src/application/service/: product_service.rs
services/rust/graphql/src/config/: settings.rs
services/rust/graphql/src/domain/entities/: product.rs
services/rust/graphql/src/graphql/: mod.rs  schema.rs
services/rust/graphql/src/infrastructure/repositories/: product_repository.rs
services/rust/graphql/src/interfaces/graphql/: schema.rs
services/rust/graphql/src/product/: mod.rs  model.rs
services/rust/grpc/: Cargo.toml  Dockerfile  build.rs
services/rust/grpc/src/: main.rs
services/rust/grpc/src/application/interfaces/: product_service.rs
services/rust/grpc/src/config/: settings.rs
services/rust/grpc/src/domain/entities/: product.rs
services/rust/grpc/src/domain/interfaces/: product_repository.rs
services/rust/grpc/src/grpc/: mod.rs  service.rs
services/rust/grpc/src/infrastructure/repositories/: product_repository.rs
services/rust/grpc/src/interfaces/grpc/: mod.rs  service.rs
services/rust/grpc/src/product/: model.rs
services/rust/grpc/src/repository/: product_repository.rs
services/rust/rest/: Cargo.toml  Dockerfile
services/rust/rest/src/: main.rs
services/rust/rest/src/application/interfaces/: product_service.rs
services/rust/rest/src/application/service/: product_service.rs
services/rust/rest/src/config/: settings.rs
services/rust/rest/src/http/: handlers.rs  mod.rs
services/rust/rest/src/interfaces/rest/: mod.rs  (+1 more)
services/rust/rest/src/product/: mod.rs  model.rs
services/rust/rest/src/repository/: product_repository.rs
(+120 files in other folders)
