[package]
name = "graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["chrono", "decimal"] }
async-graphql-axum = "7.0.17"
async-trait = "0.1.89"
axum = "0.8.1"
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
