[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
tonic = "0.12.3"
prost = "0.13.5"

[build-dependencies]
protoc-bin-vendored = "3.1.0"
tonic-build = "0.12.3"
